--- a/.env.dev
+++ b/.env.dev
@@ -7,4 +7,4 @@ PRIVATE_KEY=OrJ3PovlPm1N7CO4o8uzE1vgjJ3juSPt
 
 MAILGUN_API_KEY=278dfab3857b053ecf8c1bbdaafa32af-c50a0e68-621af629
 MAILGUN_DOMAIN_NAME=sandboxbf2e1089c0814a669e4ecfc7e1d8ef4a.mailgun.org
-MAILGUN_FROM_EMAIL=jaeuk@pohangeats.co.kr
+MAILGUN_FROM_EMAIL=jaeuk2274@gmail.com
