--- a/.env.dev
+++ b/.env.dev
@@ -5,6 +5,6 @@ DB_PASSWORD=12345
 DB_NAME=pohang-eats
 PRIVATE_KEY=OrJ3PovlPm1N7CO4o8uzE1vgjJ3juSPt
 
-MAILGUN_API_KEY=278dfab3857b053ecf8c1bbdaafa32af-c50a0e68-621af629
-MAILGUN_DOMAIN_NAME=sandboxbf2e1089c0814a669e4ecfc7e1d8ef4a.mailgun.org
-MAILGUN_FROM_EMAIL=jaeuk2274@gmail.com
+MAILGUN_API_KEY=f7d32c173fa4aaeede2a38e5188b6494-c50a0e68-0dcbf7c4
+MAILGUN_DOMAIN_NAME=sandboxccdbd10a22ea46e288d5e8a38b445a0f.mailgun.org
+MAILGUN_FROM_EMAIL=jw2274@naver.com
